arreglado-ultima-linea-izquierda

--- a/producto.html
+++ b/producto.html
@@ -57,20 +57,20 @@
                     <div class="row g-0 conocer-ingredientes">
                         <div class="col-auto me-auto">
                             <div class="dropdown">
-                                <button type="button" class="btn btn-light btn-sm border border-secondary btn-conocer dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-success btn-sm border border-secondary btn-conocer dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                                     Conocer
                                 </button>
                                 <div class="dropdown-menu p-4 text-body-secondary">
-                                    <p>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.</p>
-                                    <p>Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.</p>
-                                    <p>LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.</p>
-                                    <p>Tamaños: 50ml, 100nl, 150ml.</p>
+                                    <h6>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.<br><br>
+                                    Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.<br><br>
+                                    LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.
+                                    <br><br><em>Tamaños: 50ml, 100nl, 150ml.</em></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="col-auto">
                             <div class="dropdown">
-                                <button type="button" class="btn btn-light btn-sm border border-secondary btn-ingredientes dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-success btn-sm border border-secondary btn-ingredientes dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                                     Ingredientes
                                 </button>
                                 <div class="dropdown-menu">
@@ -99,12 +99,7 @@
             <a href="#">Todos los perfumes<img src="recursos/flecha-lateral.png"></a>       
         </div>
     </div>
-    <div class="arbol">
-        <p>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.</p>
-        <p>Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.</p>
-        <p>LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.</p>
-        <p>Tamaños: 50ml, 100nl, 150ml.</p>
-    </div>
+
 
     <!-- <div class="container text-center">
         <div class="row">
