estilo-texto-y-miniatura

--- a/producto.html
+++ b/producto.html
@@ -44,7 +44,7 @@
 </header>
 <main>
     <div class="container-fluid">
-        <div class="row gx-4 producto-pan">
+        <div class="row gx-4 producto-pag">
             <div class="col">
                 <div class="container overflow-hidden miami">
                     <h1>LOEWE Agua Miami 50ml</h1>
@@ -62,7 +62,8 @@
                                 </button>
                                 <div class="dropdown-menu p-4 text-body-secondary">
                                     <h6>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.<br><br>
-                                    Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.<br><br>
+                                    Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, 
+                                    mandarina y nerolí.<br><br>
                                     LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.
                                     <br><br><em>Tamaños: 50ml, 100nl, 150ml.</em></h6>
                                 </div>
@@ -73,21 +74,29 @@
                                 <button type="button" class="btn btn-success btn-sm border border-secondary btn-ingredientes dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                                     Ingredientes
                                 </button>
-                                <div class="dropdown-menu">
-                                    <p>ALCOHOL - PARFUM (FRAGRANCE) - AQUA (WATER) - ETHYLHEXYL METHOXYCINNAMATE - BUTYL METHOXYDIBENZOYLMETHANE - ETHYLHEXYL SALICYLATE - BHT - TOCOPHEROL - LIMONENE - LINALOOL - HYDROXYCITRONELLAL - CITRAL - CITRONELLOL - GERANIOL - ALPHA-ISOMETHYL IONONE - FARNESOL 74% Vol.</p>
+                                <div class="dropdown-menu p-4 text-body-secondary">
+                                    <h6>ALCOHOL - PARFUM (FRAGRANCE) - AQUA (WATER) - ETHYLHEXYL METHOXYCINNAMATE - BUTYL METHOXYDIBENZOYLMETHANE - ETHYLHEXYL SALICYLATE - BHT - TOCOPHEROL - LIMONENE - LINALOOL - 
+                                        HYDROXYCITRONELLAL - CITRAL - CITRONELLOL - GERANIOL - ALPHA-ISOMETHYL IONONE - FARNESOL 74% Vol.</h6>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="espacio"></div>
+                    <div class="espacio">                  
+                            <img class="thumb" src="recursos/aguaycajamiami.jpeg" tabindex="0" alt="LOEWE Agua Miami frasco con su embalaje">
+                    </div>
                     <div class="row g-0 precio-cuidados">
                         <div class="col-auto me-auto">
                             <h5>84,00 €</h5>
                         </div>
                         <div class="col-auto">
-                            <h5>Guía de cuidados</h5> 
-                            <!-- <img src="recursos/flecha-vertical.png"> -->
-                            <!-- <p>Conserve su fragancia en un lugar fresco y seco, alejado de una exposición directa a la luz y de toda fuente de calor.</p> -->
+                            <div class="dropdown dropup">
+                                <button type="button" class="btn btn-success btn-sm border border-secondary btn-cuidados dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Guía de cuidados
+                                </button>
+                                <div class="dropdown-menu p-4 text-body-secondary">                     
+                                    <h6>Conserve su fragancia en un lugar fresco y seco, alejado de una exposición directa a la luz y de toda fuente de calor.</h6>
+                                </div>
+                            </div>
                         </div>                                              
                     </div>
                 </div>
