ajustar-tamaño-img-agua

--- a/producto.html
+++ b/producto.html
@@ -45,14 +45,14 @@
 <main>
     <div class="container-fluid">
         <div class="row gx-4 producto-pag">
-            <div class="col">
+            <div class="col-md">
                 <div class="container overflow-hidden miami">
                     <h1>LOEWE Agua Miami 50ml</h1>
-                    <img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml">
+                    <div class="buitre"><img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml"></div>
                     <a id="compartir" href="#"><img src="recursos/compartir.png" alt="Icono para compartir el perfume"></a>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md">
                 <div class="container text-center">
                     <div class="row g-0 conocer-ingredientes">
                         <div class="col-auto me-auto">
@@ -81,8 +81,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="espacio">                  
-                            <img class="thumb" src="recursos/aguaycajamiami.jpeg" tabindex="0" alt="LOEWE Agua Miami frasco con su embalaje">
+                    <div class="espacio mw-100">                  
+                        <img class="thumb" src="recursos/aguaycajamiami.jpeg" tabindex="0" alt="LOEWE Agua Miami frasco con su embalaje">
                     </div>
                     <div class="row g-0 precio-cuidados">
                         <div class="col-auto me-auto">
@@ -108,23 +108,6 @@
             <a href="#">Siguiente perfume<img src="recursos/flecha-lateral.png"></a>      
         </div>
     </div>
-
-
-    <!-- <div class="container text-center">
-        <div class="row">
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4 ms-auto">.col-md-4 .ms-auto</div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 ms-md-auto">.col-md-3 .ms-md-auto</div>
-          <div class="col-md-3 ms-md-auto">.col-md-3 .ms-md-auto</div>
-        </div>
-        <div class="row">
-          <div class="col-auto me-auto">.col-auto .me-auto</div>
-          <div class="col-auto">.col-auto</div>
-        </div>
-    </div> -->
-
 </main>
 <footer>
     <div class="ap">
