botones-responsive-arr

--- a/producto.html
+++ b/producto.html
@@ -45,19 +45,19 @@
 <main>
     <div class="container-fluid">
         <div class="row gx-4 producto-pag">
-            <div class="col-md">
+            <div class="col-lg">
                 <div class="container overflow-hidden miami">
                     <h1>LOEWE Agua Miami 50ml</h1>
                     <div class="buitre"><img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml"></div>
                     <a id="compartir" href="#"><img src="recursos/compartir.png" alt="Icono para compartir el perfume"></a>
                 </div>
             </div>
-            <div class="col-md">
-                <div class="container text-center">
+            <div class="col-lg">
+                <div class="container">
                     <div class="row g-0 conocer-ingredientes">
-                        <div class="col-auto me-auto">
+                        <div class="col-lg-6 me-auto d-flex justify-content-start">
                             <div class="dropdown">
-                                <button type="button" class="btn btn-success btn-sm border border-secondary btn-conocer dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-dark btn-sm border border-white btn-conocer dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                                     Conocer
                                 </button>
                                 <div class="dropdown-menu p-4 text-body-secondary">
@@ -69,9 +69,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-lg-6 d-flex justify-content-end">
                             <div class="dropdown">
-                                <button type="button" class="btn btn-success btn-sm border border-secondary btn-ingredientes dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-dark btn-sm border border-white btn-ingredientes dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                                     Ingredientes
                                 </button>
                                 <div class="dropdown-menu p-4 text-body-secondary">
@@ -85,12 +85,12 @@
                         <img class="thumb" src="recursos/aguaycajamiami.jpeg" tabindex="0" alt="LOEWE Agua Miami frasco con su embalaje">
                     </div>
                     <div class="row g-0 precio-cuidados">
-                        <div class="col-auto me-auto">
+                        <div class="col-lg-6 me-auto d-flex justify-content-start precio">
                             <h5>84,00 €</h5>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-lg-6 d-flex justify-content-end">
                             <div class="dropdown dropup">
-                                <button type="button" class="btn btn-success btn-sm border border-secondary btn-cuidados dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-dark btn-sm border border-white btn-cuidados dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                                     Guía de cuidados
                                 </button>
                                 <div class="dropdown-menu p-4 text-body-secondary">                     
