naturaleza-seccion-de-olga

--- a/index.html
+++ b/index.html
@@ -187,7 +187,6 @@
                 </div>
             </div>
             <div>
-
                 <div>
                     <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
                     <p>89,00€</p>
@@ -195,6 +194,19 @@
                 </div>
             </div>
             </div> 
+    </section>
+
+    <section>
+        <div class="naturaleza">
+            <div class="container">
+               <h3>NATURALEZA Y EMOCIÓN</h3>
+               <h2>botanical rainbow</h2>
+               <p>La nueva campaña de LOEWE está protagonizada por Úrsula Corberó, Greta Lee y Stéphane Bak.</p>
+               <ul>
+                    <li class="nav-item"><a class="nav-link" href="#">ver colección</a></li>
+               </ul>
+            </div>
+       </div>
     </section>
 
     <section id="novedades">
