--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <div id="navbarNav" class="collapse navbar-collapse blanco-2">
+                <div id="navbarNav" class="collapse navbar-collapse">
                     <ul id="mdesplegado" class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
