--- a/producto.html
+++ b/producto.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
-<body">
+<body>
 <header>       
     <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
         <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div>
-                <h1 id="perfumes">PERFUMES</h1>
+                <h2 id="perfumes">PERFUMES</h2>
             </div>
             <div id="encontrar">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,15 +104,15 @@
             </div>
         </div>
         <div class="enlaces">
-            <a href="#">Todos los perfumes<img src="recursos/flecha-lateral.png"></a> 
-            <a href="#">Siguiente perfume<img src="recursos/flecha-lateral.png"></a>      
+            <a href="#">Todos los perfumes<img src="recursos/flecha-lateral.png" alt="Flecha lateral"></a> 
+            <a href="#">Siguiente perfume<img src="recursos/flecha-lateral.png" alt="Flecha lateral"></a>      
         </div>
     </div>
 </main>
 
 <footer>
     <div class="ap">
-        <img src="recursos/loewe-logo-cuadrado.webp">
+        <img src="recursos/loewe-logo-cuadrado.webp" alt="Isotipo de LOEWE">
         <div class="contacto">
             <ul>
                 <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
