--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
-<body">
+<body>
 <header>
     <div class="altura-header">       
         <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
@@ -22,7 +22,7 @@
                     </a>
                 </div>
                 <div>
-                    <h1 id="perfumes">PERFUMES</h1>
+                    <h2 id="perfumes">PERFUMES</h2>
                 </div>
                 <div id="encontrar">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <video class="embed-responsive-item" loop autoplay muted="muted">
                     <source src="recursos/loewevideo.mp4" type="video/mp4">
-                    <img id="alternative" src="recursos/alternative.jpg">
+                    <img id="alternative" src="recursos/alternative.jpg" alt="Una flor sobre el agua flotando">
                 </video>
             </div>
         </div>
@@ -129,13 +129,13 @@
         <div class="text">
             <h2>Best Sellers</h2>
         </div>
-        <img src="recursos/perfumes.png">
+        <img src="recursos/perfumes.png" alt="Colección de perfumen de LOEWE">
         <div id="galery">
                 <div>
                     <div>
                     <h3>Vela pequeña tomato leaves</h3>
                     <p>85,00€</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                     </div>
                 </div>
                 
@@ -143,7 +143,7 @@
                     <div>
                     <h3>Vela pequeña Cypress Balls</h3>
                     <p>85,00€</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                     </div>
                 </div>
 
@@ -151,7 +151,7 @@
                     <div>
                     <h3>Vela pequeña Oregano</h3>
                     <p>85,00 €</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                 </div>
 
                 </div>
@@ -159,7 +159,7 @@
                 <div>
                     <h3>Tomato Leaves jabón líquido</h3>
                     <p>60,00 €</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a><p>
                 </div>
 
                 </div>
@@ -167,7 +167,7 @@
                 <div>
                     <h3>LOEWE Aire Sutileza 50ml</h3>
                     <p>84,00 €</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                 </div>
             </div>
 
@@ -175,7 +175,7 @@
                 <div>
                     <h3>LOEWE Esencia EDP 50ml</h3>
                     <p>118,00 €</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                 </div>
             </div>
 
@@ -183,14 +183,14 @@
                 <div>
                     <h3>Vela pequeña tomato leaves</h3>
                     <p>85,00€</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                 </div>
             </div>
             <div>
                 <div>
                     <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
                     <p>89,00€</p>
-                    <li class="ver"><a href="#">Ver producto</a></li>
+                    <p class="ver"><a href="#">Ver producto</a></p>
                 </div>
             </div>
             </div> 
@@ -244,7 +244,7 @@
 
     <footer>
             <div class="ap">
-                <img src="recursos/loewe-logo-cuadrado.webp">
+                <img src="recursos/loewe-logo-cuadrado.webp" alt="Isotipo de LOEWE">
                 <div class="contacto">
                     <ul>
                         <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
