--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -57,31 +57,31 @@
     </header>
     <section id="productos">
         <h2>COLECCIÓN AGUA</h2>
-        <div class="container text-center">
+        <div class="container text-center" >
             <div class="row">
               <div class="col">
-                <img src="recursos/agua-EDT.webp">
+                <img src="recursos/agua-EDT.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua EDT</h4>
                     <p>84,00 €</p>
                 </figcaption>
               </div>
               <div class="col">
-                <img src="recursos/agua-ella.webp">
+                <img src="recursos/agua-ella.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua Ella</h4>
                     <p>84,00 €</p>
                 </figcaption>
               </div>
               <div class="col">
-                <img src="recursos/mar de coral.webp">
+                <img src="recursos/mar de coral.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua Mar de Coral</h4>
                     <p>84,00 €</p>
                 </figcaption>
               </div>
               <div class="col">
-                <img src="recursos/LOEWE Agua Miami 100Ml.jpeg">
+                <img src="recursos/LOEWE Agua Miami 100Ml.jpeg" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua Miami 50ml</h4>
                     <p>84,00€</p>
@@ -91,21 +91,21 @@
 
             <div class="row">
               <div class="col-6">
-                <img src="recursos/cofreagua.png">
+                <img src="recursos/cofreagua.png" href="producto.html">
                 <figcaption>
                     <h4>Cofre regalo Agua Mar de Coral EDT 100ml</h4>
                     <p>110,00 €</p>
                 </figcaption>
               </div>
              <div class="col-3"> 
-                <img src="recursos/loewe coral madera.webp">
+                <img src="recursos/loewe coral madera.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
                     <p>37,00 €</p>
                 </figcaption>
               </div>
               <div class="col-3"> 
-                <img src="recursos/aguaedtmadera.webp">
+                <img src="recursos/aguaedtmadera.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
                     <p>37,00 €</p>
