--- a/index.html
+++ b/index.html
@@ -131,43 +131,43 @@
         </div>
         <img src="recursos/perfumes.png" alt="Colección de perfumen de LOEWE">
         <div id="galery">
+            <div>
                 <div>
-                    <div>
                     <h3>Vela pequeña tomato leaves</h3>
                     <p>85,00€</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
-                    </div>
+                    <a href="#">Ver producto</a>
                 </div>
+            </div>
                 
+            <div>
                 <div>
-                    <div>
                     <h3>Vela pequeña Cypress Balls</h3>
                     <p>85,00€</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
-                    </div>
+                    <a href="#">Ver producto</a>
                 </div>
+            </div>
 
+            <div>
                 <div>
-                    <div>
                     <h3>Vela pequeña Oregano</h3>
                     <p>85,00 €</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
+                    <a href="#">Ver producto</a>
                 </div>
+            </div>
 
-                </div>
-                <div>
+            <div>
                 <div>
                     <h3>Tomato Leaves jabón líquido</h3>
                     <p>60,00 €</p>
-                    <p class="ver"><a href="#">Ver producto</a><p>
+                    <a href="#">Ver producto</a>
                 </div>
+            </div>
 
-                </div>
-                <div>
+            <div>
                 <div>
                     <h3>LOEWE Aire Sutileza 50ml</h3>
                     <p>84,00 €</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
+                    <a href="#">Ver producto</a>
                 </div>
             </div>
 
@@ -175,7 +175,7 @@
                 <div>
                     <h3>LOEWE Esencia EDP 50ml</h3>
                     <p>118,00 €</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
+                    <a href="#">Ver producto</a>
                 </div>
             </div>
 
@@ -183,17 +183,18 @@
                 <div>
                     <h3>Vela pequeña tomato leaves</h3>
                     <p>85,00€</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
+                    <a href="#">Ver producto</a>
                 </div>
             </div>
+
             <div>
                 <div>
                     <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
                     <p>89,00€</p>
-                    <p class="ver"><a href="#">Ver producto</a></p>
+                    <a href="#">Ver producto</a>
                 </div>
             </div>
-            </div> 
+        </div> 
     </section>
 
     <section>
