--- a/producto.html
+++ b/producto.html
@@ -18,7 +18,7 @@
         <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
             <div id="divloewe">
                 <a class="navbar-brand" href="index.html">
-                    <img src="recursos/logo" alt="Logotipo de Loewe" class="d-inline-block align-text-top pt-4">
+                    <img src="recursos/logo-4.png" alt="Logotipo de Loewe" class="d-inline-block align-text-top pt-4">
                 </a>
             </div>
             <div>
