--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="altura-header">       
         <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
             <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
-               
+                <div id="divloewe">
                     <a class="navbar-brand" href="index.html">
                         <img src="recursos/logo-4.png" alt="Logotipo de Loewe" class="d-inline-block align-text-top pt-4">
                     </a>
-                
+                </div>
                 <div>
                     <h2 id="perfumes">PERFUMES</h2>
                 </div>
