--- a/index.html
+++ b/index.html
@@ -125,75 +125,81 @@
         </div>
     </div>
 
-    <section id="best_sellers">
-        <div class="text">
-            <h2>Best Sellers</h2>
-        </div>
-        <img src="recursos/perfumes.png" alt="Colección de perfumen de LOEWE">
-        <div id="galery">
-            <div>
-                <div>
-                    <h3>Vela pequeña tomato leaves</h3>
-                    <p>85,00€</p>
-                    <a href="#">Ver producto</a>
+    <section class="container" id="best_sellers">
+        <div class="row">
+            <div class="col-6 col-md-4 d-flex justify-content-center">
+                <div class="text">
+                    <h2>Best Sellers</h2>
                 </div>
+                <img id="img-naturaleza" src="recursos/perfumes.png" alt="Colección de perfumen de LOEWE">
             </div>
-                
-            <div>
-                <div>
-                    <h3>Vela pequeña Cypress Balls</h3>
-                    <p>85,00€</p>
-                    <a href="#">Ver producto</a>
-                </div>
-            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center">
+                <div id="galery">
+                    <div>
+                        <div>
+                            <h3>Vela pequeña tomato leaves</h3>
+                            <p>85,00€</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
+                        
+                    <div>
+                        <div>
+                            <h3>Vela pequeña Cypress Balls</h3>
+                            <p>85,00€</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
 
-            <div>
-                <div>
-                    <h3>Vela pequeña Oregano</h3>
-                    <p>85,00 €</p>
-                    <a href="#">Ver producto</a>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <h3>Tomato Leaves jabón líquido</h3>
-                    <p>60,00 €</p>
-                    <a href="#">Ver producto</a>
-                </div>
-            </div>
+                    <div>
+                        <div>
+                            <h3>Vela pequeña Oregano</h3>
+                            <p>85,00 €</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h3>Tomato Leaves jabón líquido</h3>
+                            <p>60,00 €</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
 
-            <div>
-                <div>
-                    <h3>LOEWE Aire Sutileza 50ml</h3>
-                    <p>84,00 €</p>
-                    <a href="#">Ver producto</a>
-                </div>
-            </div>
+                    <div>
+                        <div>
+                            <h3>LOEWE Aire Sutileza 50ml</h3>
+                            <p>84,00 €</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
 
-            <div>
-                <div>
-                    <h3>LOEWE Esencia EDP 50ml</h3>
-                    <p>118,00 €</p>
-                    <a href="#">Ver producto</a>
-                </div>
-            </div>
+                    <div>
+                        <div>
+                            <h3>LOEWE Esencia EDP 50ml</h3>
+                            <p>118,00 €</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
 
-            <div>
-                <div>
-                    <h3>Vela pequeña tomato leaves</h3>
-                    <p>85,00€</p>
-                    <a href="#">Ver producto</a>
-                </div>
-            </div>
+                    <div>
+                        <div>
+                            <h3>Vela pequeña tomato leaves</h3>
+                            <p>85,00€</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
 
-            <div>
-                <div>
-                    <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
-                    <p>89,00€</p>
-                    <a href="#">Ver producto</a>
+                    <div>
+                        <div>
+                            <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
+                            <p>89,00€</p>
+                            <a href="#">Ver producto</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div> 
+    </div> 
     </section>
 
     <section>
