--- a/index.html
+++ b/index.html
@@ -126,14 +126,15 @@
     </div>
 
     <section class="container" id="best_sellers">
-        <div class="row">
-            <div class="col-6 col-md-4 d-flex justify-content-center">
+        <div class="row justify-content-center">
+            <div class="col">
                 <div class="text">
                     <h2>Best Sellers</h2>
                 </div>
                 <img id="img-naturaleza" src="recursos/perfumes.png" alt="Colección de perfumen de LOEWE">
             </div>
-            <div class="col-6 col-md-4 d-flex justify-content-center">
+         
+            <div class="col">
                 <div id="galery">
                     <div>
                         <div>
