--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -5,8 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loewe Agua</title>
+    <link rel="icon" type="image/x-icon" href="/recursos/loewe_simbolo.jpeg">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style-agua.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm justify-content-center">
+            <div class="container-fluid" id="menu">
+                <div>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="recursos/logo" alt="Logotipo de Loewe" width="100" class="d-inline-block align-text-top">
+                    </a>
+                </div>
+                <div>
+                    <h1>PERFUMES</h1>
+                </div>
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">LOUWE X ON</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+        <div class="principal">
+             <img src="recursos/fondoagua.png">
+             <div>
+                <h3>AGUA</h3>
+                <p>La primera colección de fragancias para el hogar inspiradas en los jardines botánicos. 
+                    perfume unisex, dinámico y refrescante inspirado en el brillo que proyecta la luz en el agua.</p>
+             </div>
+        </div>
+    </header>
+    <section id="productos">
+        <h2>COLECCIÓN AGUA</h2>
+        <div class="container text-center" >
+            <div class="row">
+              <div class="col">
+                <img src="recursos/agua-EDT.webp" href="producto.html">
+                <figcaption>
+                    <h4>LOEWE Agua EDT</h4>
+                    <p>84,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/agua-ella.webp" href="producto.html">
+                <figcaption>
+                    <h4>LOEWE Agua Ella</h4>
+                    <p>84,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/mar de coral.webp" href="producto.html">
+                <figcaption>
+                    <h4>LOEWE Agua Mar de Coral</h4>
+                    <p>84,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/LOEWE Agua Miami 100Ml.jpeg" href="producto.html">
+                <figcaption>
+                    <h4>LOEWE Agua Miami 50ml</h4>
+                    <p>84,00€</p>
+                </figcaption>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-6">
+                <img src="recursos/cofreagua.png" href="producto.html">
+                <figcaption>
+                    <h4>Cofre regalo Agua Mar de Coral EDT 100ml</h4>
+                    <p>110,00 €</p>
+                </figcaption>
+              </div>
+             <div class="col-3"> 
+                <img src="recursos/loewe coral madera.webp" href="producto.html">
+                <figcaption>
+                    <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
+                    <p>37,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col-3"> 
+                <img src="recursos/aguaedtmadera.webp" href="producto.html">
+                <figcaption>
+                    <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
+                    <p>37,00 €</p>
+                </figcaption>
+              </div>
+            </div>
+          </div>
+    </section>
+    <footer>
+        <div class="ap">
+            <img src="recursos/loewe-logo-cuadrado.webp">
+            <div class="contacto">
+                <ul>
+                    <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Países/regiones de entrega</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Corporate Gifts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Acerca de LOEWE Perfumes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Política ambiental y calidad</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="politicas">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="#">Términos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Polítia de privacidad</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Formulario de devolución</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Cookies</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Parámetros Cookies</a></li>
+            </ul>
+        </div>
+        <div class="redes">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Facebook</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Youtube</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
