--- a/producto.html
+++ b/producto.html
@@ -104,8 +104,8 @@
             </div>
         </div>
         <div class="enlaces">
-            <a href="#">Todos los perfumes<img src="recursos/flecha-lateral.png" alt="Flecha lateral"></a> 
-            <a href="#">Siguiente perfume<img src="recursos/flecha-lateral.png" alt="Flecha lateral"></a>      
+            <a href="seccion-agua.html">Todos los perfumes<img src="recursos/flecha-lateral.png" alt="Flecha lateral"></a> 
+            <a href="seccion-agua.html">Siguiente perfume<img src="recursos/flecha-lateral.png" alt="Flecha lateral"></a>      
         </div>
     </div>
 </main>
