--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 </div>
                 <div id="navbarNav" class="collapse navbar-collapse">
                     <ul id="mdesplegado" class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">LOEWE X ON</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seccion-agua.html">MUJER</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seccion-agua.html">HOMBRE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seccion-agua.html">LOEWE X ON</a></li>
+                        <li class="nav-item"><a class="nav-link" href="producto.html">REGALOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="producto.html">ARTESANÍA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="producto.html">STORIES</a></li>
                     </ul>
                 </div>
             </div>
