--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h3 class="card-title">Naturaleza innata</h3>
-                            <a class="btn btn-outline-dark btn-sm" href="#">+</a>
+                            <a class="btn btn-outline-dark btn-sm" href="seccion-agua.html">+</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -239,7 +239,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h3 class="card-title">Un paseo por Madrid</h3>
-                            <a class="btn btn-outline-dark btn-sm" href="#">+</a>
+                            <a class="btn btn-outline-dark btn-sm" href="seccion-agua.html">+</a>
                         </div>
                     </div>
                 </div>
