--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="carousel-item card-2">
-                <img src="recursos/Agua.png" class="d-block" alt="Perfume Agua">
+                <a href="seccion-agua.html"><img src="recursos/Agua.png" class="d-block" alt="Perfume Agua"></a>
                 <div class="carousel-caption d-none d-sm-block">
                     <h3>Agua</h3>
                 </div>  
