--- a/producto.html
+++ b/producto.html
@@ -45,15 +45,15 @@
 
 <main>
     <div class="container-fluid">
-        <div class="row gx-4 producto-pag">
-            <div class="col-lg">
+        <div class="row g-0 producto-pag">
+            <div class="col-lg contenido-perfume">
                 <div class="container overflow-hidden miami">
                     <h1>LOEWE Agua Miami 50ml</h1>
                     <div class="buitre"><img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml"></div>
                     <a id="compartir" href="#"><img src="recursos/compartir.png" alt="Icono para compartir el perfume"></a>
                 </div>
             </div>
-            <div class="col-lg">
+            <div class="col-lg contenido-perfume contenido-perfume-derch">
                 <div class="container">
                     <div class="row g-0 conocer-ingredientes">
                         <div class="col-lg-6 me-auto d-flex justify-content-start">
