--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h3 class="card-title">Un paseo por Madrid</h3>
-                            <a class="btn btn-outline-dark btn-sm" href="seccion-agua.html">+</a>
+                            <a class="btn btn-outline-dark btn-sm" href="producto.html">+</a>
                         </div>
                     </div>
                 </div>
