--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                         <li class="nav-item"><a class="nav-link" href="seccion-agua.html">MUJER</a></li>
                         <li class="nav-item"><a class="nav-link" href="seccion-agua.html">HOMBRE</a></li>
                         <li class="nav-item"><a class="nav-link" href="seccion-agua.html">LOEWE X ON</a></li>
-                        <li class="nav-item"><a class="nav-link" href="producto.html">REGALOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="producto.html">ARTESANÍA</a></li>
-                        <li class="nav-item"><a class="nav-link" href="producto.html">STORIES</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seccion-agua.html">REGALOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seccion-agua.html">ARTESANÍA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seccion-agua.html">STORIES</a></li>
                     </ul>
                 </div>
             </div>
