--- a/producto.html
+++ b/producto.html
@@ -13,35 +13,47 @@
 </head>
 
 <body>
-<header>       
-    <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
-        <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
-            <div id="divloewe">
-                <a class="navbar-brand" href="index.html">
-                    <img src="recursos/logo-4.png" alt="Logotipo de Loewe" class="d-inline-block align-text-top pt-4">
-                </a>
-            </div>
-            <div>
-                <h2 id="perfumes">PERFUMES</h2>
-            </div>
-            <div id="encontrar">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div id="navbarNav" class="collapse navbar-collapse blanco-2">
-                <ul id="mdesplegado" class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">LOEWE X ON</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
-                </ul>
+    <header>
+        <div class="altura-header">       
+            <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
+                <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
+                    <div id="divloewe">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="recursos/logo-4.png" alt="Logotipo de Loewe" class="d-inline-block align-text-top pt-4">
+                        </a>
+                    </div>
+                    <div>
+                        <h2 id="perfumes">PERFUMES</h2>
+                    </div>
+                    <div id="encontrar">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div id="navbarNav" class="collapse navbar-collapse">
+                        <ul id="mdesplegado" class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">MUJER</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">HOMBRE</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">LOEWE X ON</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">REGALOS</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">ARTESANÍA</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">STORIES</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            
+            <div class="container-fluid">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <video class="embed-responsive-item" loop autoplay muted="muted">
+                        <source src="recursos/loewevideo.mp4" type="video/mp4">
+                        <img id="alternative" src="recursos/alternative.jpg" alt="Una flor sobre el agua flotando">
+                    </video>
+                </div>
             </div>
         </div>
-    </nav>
-</header>
+    </header>
+    
 
 <main>
     <div class="container-fluid">
