--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -18,34 +18,36 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm justify-content-center">
-            <div class="container-fluid" id="menu">
-                <div>
-                    <a class="navbar-brand" href="index.html">
-                        <img src="recursos/logo.png" alt="Logotipo de Loewe" width="100" class="d-inline-block align-text-top">
-                    </a>
-                </div>
-                <div>
-                    <h1 id="perfumes">PERFUMES</h1>
-                </div>
-                <div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">LOUWE X ON</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
-                    </ul>
-                </div>
+        <div class="altura-header">       
+            <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
+                <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
+                    <div id="divloewe">
 
-            </div>
-        </nav>
+                        <a class="navbar-brand" href="index.html">
+                            <img src="recursos/logo-4.png" alt="Logotipo de Loewe" class="d-inline-block align-text-top pt-4">
+                        </a>
+                    </div>
+                    <div>
+                        <h2 id="perfumes">PERFUMES</h2>
+                    </div>
+                    <div id="encontrar">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div id="navbarNav" class="collapse navbar-collapse">
+                        <ul id="mdesplegado" class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">MUJER</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">HOMBRE</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">LOEWE X ON</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">REGALOS</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">ARTESANÍA</a></li>
+                            <li class="nav-item"><a class="nav-link" href="seccion-agua.html">STORIES</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        
         <div class="principal">
              <img src="recursos/fondoagua.png">
              <div>
@@ -55,61 +57,82 @@
              </div>
         </div>
     </header>
+
     <section id="productos">
         <h2>COLECCIÓN AGUA</h2>
         <div class="container text-center" >
             <div class="row">
+
               <div class="col">
-                <img src="recursos/agua-EDT.webp" href="producto.html">
+                <a href="producto.html">
+                <img src="recursos/agua-EDT.webp">
                 <figcaption>
                     <h4>LOEWE Agua EDT</h4>
                     <p>84,00 €</p>
                 </figcaption>
+                </a>
               </div>
+
               <div class="col">
-                <img src="recursos/agua-ella.webp" href="producto.html">
+                <a href="producto.html">
+                <img src="recursos/agua-ella.webp">
                 <figcaption>
                     <h4>LOEWE Agua Ella</h4>
                     <p>84,00 €</p>
                 </figcaption>
+            </a>
               </div>
+
               <div class="col">
-                <img src="recursos/mar de coral.webp" href="producto.html">
+                <a href="producto.html">
+                <img src="recursos/mar de coral.webp">
                 <figcaption>
                     <h4>LOEWE Agua Mar de Coral</h4>
                     <p>84,00 €</p>
                 </figcaption>
+            </a>
               </div>
+
               <div class="col">
-                <img src="recursos/LOEWE Agua Miami 100Ml.jpeg" href="producto.html">
+                <a href="producto.html">
+                <img src="recursos/LOEWE Agua Miami 100Ml.jpeg">
                 <figcaption>
                     <h4>LOEWE Agua Miami 50ml</h4>
                     <p>84,00€</p>
                 </figcaption>
+            </a>
               </div>
+
             </div>
 
             <div class="row">
               <div class="col-6">
-                <img src="recursos/cofreagua.png" href="producto.html">
+                <a href="producto.html">
+                <img src="recursos/cofreagua.png">
                 <figcaption>
                     <h4>Cofre regalo Agua Mar de Coral EDT 100ml</h4>
                     <p>110,00 €</p>
                 </figcaption>
+            </a>
               </div>
+
              <div class="col-3"> 
+                <a href="producto.html">
                 <img src="recursos/loewe coral madera.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
                     <p>37,00 €</p>
                 </figcaption>
+            </a>
               </div>
               <div class="col-3"> 
+                <a href="producto.html">
                 <img src="recursos/aguaedtmadera.webp" href="producto.html">
                 <figcaption>
                     <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
                     <p>37,00 €</p>
                 </figcaption>
+            </a>
               </div>
             </div>
           </div>
@@ -145,5 +168,7 @@
             </ul>
         </div>
     </footer>
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
